--- a/jogodavelha.css
+++ b/jogodavelha.css
@@ -1,4 +1,20 @@
-#jogo{
+.botao{
+	width: 200px;
+	height: 200px;
+	font-size: 180px;
+}
+
+.limpar{
+    width: 608px;
+}
+
+h1{
+	font-size: 65px;
+	margin: 0px;
+}
+
+
+/* #jogo{
     width:603px;
     height:600px;
     border:solid 3px
@@ -17,4 +33,4 @@
 }
 
 
-Read more: http://www.linhadecodigo.com.br/artigo/3506/criando-um-jogo-da-velha-em-javascript-html-e-css.aspx#ixzz5kpUob1zk
+Read more: http://www.linhadecodigo.com.br/artigo/3506/criando-um-jogo-da-velha-em-javascript-html-e-css.aspx#ixzz5kpUob1zk */
